[project]
name = "bdd-web-project"
version = "0.1.0"
description = "Projet de base de donnée et Web Efrei RS 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = ["ruff>=0.15.20", "ty>=0.0.54"]


[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 2

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
